--- a/src/Icons/icons.qrc
+++ b/src/Icons/icons.qrc
@@ -12,6 +12,7 @@
         <file>edgeProperties.png</file>
         <file>mergePatch.png</file>
         <file>DeletHexBlock.png</file>
+        <file>SplitHexBlock.png</file>
         <file>rotateVertices.png</file>
         <file>snapVertices.png</file>
     </qresource>
